# eden

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: multi_output_regressor.py  quantized_adaptive_random_forest.py  random_forest_class_leaves.py  random_forest_export.py  random_forest_padded_vectors.py
src/eden/: __init__.py  _config.py  _conversion.py  _deployment.py  _eden_ensemble.py  _formatter.py  _memory.py  _parser.py  _quantization.py  _run.py  _types.py  _validation.py  datasets.py  datasets_blackblaze.py  edengarden.py  ensemble.py  main.py  tree.py  utils.py
src/eden/adaptive_cycles/: hdd.py  ninapro.py  unimib.py
src/eden/adaptive_theoretical/: hdd.py  hdd_qwyc.py  ninapro.py  unimib.py
src/eden/backend/: allocation.py  deployment.py  utils.py
src/eden/codegen/: __init__.py  _config.py  _data.py  _formatter.py  _input.py  _main.py  exporter.py
src/eden/export/: arrays.py  carrays.py  cvectors.py  fvectors.py  onnx.py  vectors.py
src/eden/gradient_boosting/: __init__.py  (+1 more)
tests/: test_class_leaves.py  test_convert.py  test_parser.py
tests/convert/: test_dt.py  test_gbt.py  test_rf.py
tests/export/: test_onnx_export.py
tests/fixtures/: data.py  models.py
tests/frontend/: test_sklearn_parsers.py
tests/models/: classification_tree_binary.json  classification_tree_multiclass.json  gradientboostingclassifier.json  gradientboostingregressor.json  randomforestclassifier.json  randomforestregressor.json  regression_tree.json
tests/target_platform/: test_gap8.py
tests/transforms/: test_pruning.py  test_quantization.py
(+123 files in other folders)
